Add image search route and image retrieval via Bing Image Search API

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   </ul>
   <h3>Example JSON Output: Image Search</h3>
   <ul>
-    <li><code>TBD</code></li>
+    <li><code>[{<b>"imageUrl":</b> "www.zastavki.com/eng/Animals/Cats/wallpaper-23761.htm", <b>"hostPageUrl":</b> "http://www.zastavki.com/eng/Animals/Cats/wallpaper-23761.htm", <b>"altText":</b> "Cat wallpapers and images - wallpapers, pictures, photos"}, {...}]</code></li>
   </ul>
   <h3>Example JSON Output: Search History</h3>
   <ul>
