--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li>I can get the image URLs, alt text and page urls for a set of images relating to a given search string.</li>
     <li>I can paginate through the responses by adding a ?offset=2 parameter to the URL.</li>
-    <li> I can get a list of the most recently submitted search strings.</li>
+    <li>I can get a list of the most recently submitted search strings.</li>
   </ul>
   <h3>Example API Requests</h3>
   <ul>
@@ -25,7 +25,7 @@
   </ul>
   <h3>Example JSON Output: Search History</h3>
   <ul>
-    <li><code>TBD</code></li>
+    <li><code>[{<b>"searchTerm":</b> "rabbits", <b>"searchTime":</b> "2016-10-05 19:35:03"}, {...}]</code></li>
   </ul>
 </body>
 </html>
